<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="edu.uw.group2.locationtagger.TagList">

    <TextView
        android:id="@+id/tagListTitle"
        android:text="@string/event_tag_list_title"
        style="@style/TextStyle.Detail.Title"/>

    <Button
        android:text="@string/my_tag_button"
        android:id="@+id/btnMyTag"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        style="@style/Button"
        />

    <LinearLayout
        android:id="@+id/layoutBottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <Button
            android:id="@+id/btnAR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_ar"
            android:layout_weight="5"
            />
        <Button
            android:id="@+id/btnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_map"
            android:layout_weight="5"
            />
        <Button
            android:id="@+id/btnList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_list"
            android:layout_weight="5"/>
    </LinearLayout>

    <ListView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/tagListView"
        android:layout_below="@+id/tagListTitle"
        android:layout_above="@id/layoutBottomButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ListView>

</RelativeLayout>
