<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uw.group2.locationtagger.AddAPoint"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="edu.uw.group2.locationtagger.MapsActivity"
        tools:layout="@layout/abc_action_bar_title_item"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <Button
            android:id="@+id/btnAR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_ar"
            android:layout_weight="5"
            />
        <Button
            android:id="@+id/btnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_map"
            android:layout_weight="5"
            />
        <Button
            android:id="@+id/btnList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_list"
            android:layout_weight="5"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAddTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_add_plus"
            map:borderWidth="0dp"
            android:clickable="true"
            android:backgroundTint="@color/colorPrimary"
             />
    </FrameLayout>

</RelativeLayout>
